[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/WaveSkullIcon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/WavePreview.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 56.0

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = ExtResource( 3 )

[node name="WavePreview" type="Node2D"]
script = ExtResource( 2 )

[node name="PreviewSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = -32.0
margin_top = -48.0
margin_right = 8.0
margin_bottom = -16.0

[node name="Panel" type="Panel" parent="Control"]
margin_left = -240.0
margin_top = 8.0
margin_right = -24.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="Control"]
margin_left = -232.0
margin_top = 16.0
margin_right = -112.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )

[node name="Label2" type="Label" parent="Control"]
margin_left = -232.0
margin_top = 40.0
margin_right = -112.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )

[node name="Label3" type="Label" parent="Control"]
margin_left = -232.0
margin_top = 72.0
margin_right = -112.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
